# regression-end-to-end-ml-project

./: README.md  pre-req-installation.md  pyproject.toml
phase-0/: .gitignore  README.md  pyproject.toml
phase-0/data_s3/: demand_data.csv
phase-0/src/: lambda_function.py
phase-1/: .gitignore  README.md  pyproject.toml
phase-1/docs/: lambda_setup.md
phase-1/lab_docs/: aws_configuration_guide.md  lambda_setup.md
phase-1/notebooks/: 00_download_data_and_models.ipynb  01_S3_push_datasets_AWS.ipynb  02_smoke_test.ipynb
phase-1/src/: lambda_function.py  sample_inference_input.json
phase-1/src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
phase-1/src/inference_pipeline/: inference.py
phase-1/src/training_pipeline/: eval.py  train.py  tune.py
phase-2/: README.md
phase-3/: README.md
