[project]
name = "phase-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.30",
    "gdown>=5.2.1",
    "pandas>=2.3.3",
    "joblib>=1.4.2",
    "lightgbm>=4.3.0",
    "optuna>=4.7.0",
    "mlflow>=3.8.1",
]


